--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-scripts": "3.3.0",
     "redux": "^4.0.5",
     "redux-firestore": "^0.11.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "tools": "0.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
